[package]
name = "egui_dnd"
version = "0.3.0"
edition = "2021"
authors = ["Lucas Meurer"]
repository = "https://github.com/lucasmerlin/egui_dnd"
keywords = ["egui", "drag", "drop", "ui"]
description = "A drag and drop library for egui"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.21", path = "../egui/crates/egui" }

[dev-dependencies]
egui_extras = { version = "0.21", path = "../egui/crates/egui_extras" }
color-hex = "0.2.0"
egui = { version = "0.21", path = "../egui/crates/egui", features = ["color-hex"] }
eframe = { version = "0.21", path = "../egui/crates/eframe" }


#[workspace]
#members = ["fancy-example"]
